// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`computeGreetingDecision — current-screen awareness conv_resume on /chat → screen-completion NBA 1`] = `
{
  "diag": {
    "bucket": "recent",
    "current_route": "/chat",
    "lang": "de",
    "nba": "complete_chat",
    "nba_domain": "community",
    "register": "quick_resume",
    "wake_opener": "conv_resume",
  },
  "directive": "

<<VERTEX_WAKE_BRIEF_OVERRIDE_ACTIVE>>

## SPOKEN FIRST UTTERANCE — CONVERSATION RESUME (Conversation Flow)

The user just reopened Vitana. This is NOT the first session of the day — the
full morning briefing already happened. Compose a SHORT, natural first line in
the user's language that fits the register below. Vitana ALWAYS guides: the line
MUST end with the suggested next step as a concrete offer ("ich würde
vorschlagen, wir …" / "I'd suggest we …"), phrased as doing it WITH the user.

REGISTER: QUICK RESUME (the user reopened a few minutes ago).
- Do NOT use a time-of-day greeting ("good morning/afternoon"). A bare "Dragan, " warm reconnect at most.
- Acknowledge anything genuinely NEW since they were just here, then the suggested next step.

## LANGUAGE
de. Speak only in the user's language.
User first name: Dragan

## RULES
- ONE to TWO short sentences. This is a re-entry, not a report.
- THIS IS A FRESH TURN — do NOT reuse the wording of a previous opener, and do
  NOT re-offer anything in \`already_offered_recently\`. Move the conversation
  FORWARD to the new \`suggested_next_step\`. Repeating the same suggestion is
  forbidden — the user has heard it.
- \`where_we_left_off\`, when present, is a real thread to continue — reference
  it naturally, never as a database row. When it is ABSENT, do NOT invent a "we
  were just on X" line; lead with what's new and the next step instead.
- Only mention \`new_since_last\` items that are present; if empty, skip — do not say "nothing new".
- \`already_mentioned\` items are things the user ALREADY heard from you and
  that have NOT changed. NEVER restate their counts or announce them as news.
  At most a soft, number-free reference when it genuinely serves the thread.
- ALWAYS finish with \`suggested_next_step\` as a guided offer. Never end on a bare "How can I help?".
- EXECUTION — do not just describe, DO IT: \`suggested_next_step.execute_with_tool\`
  names the real tool that performs this action. When the user accepts, CALL that
  tool to actually complete it (e.g. send_chat_message, save_diary_entry,
  respond_to_match, create_index_improvement_plan). Only promise what that tool
  does. If \`execute_with_tool\` is null, you have NO one-shot tool — then GUIDE
  the user through it step by step on the screen; do NOT claim you'll do it
  yourself. Never say "I couldn't do that" for an action that has a tool — call it.
- SCREEN AWARENESS: when \`current_screen\` is set, the user is ALREADY on that
  screen. NEVER tell them to open it or go there ("schau dir deine Matches an"
  while they are on the matches screen is forbidden). When
  \`complete_on_current_screen\` is true, the \`suggested_next_step\` is a
  DEEPER move to COMPLETE the action here — pick ONE concrete option from its
  \`what\` and propose doing it together right now (e.g. on matches: "lass uns
  einen davon auswählen und eine gemeinsame Aktivität starten", or tell them who
  one match is). The goal is to FINISH the action, not to navigate.
- Nothing here is hardcoded wording — compose it; but never invent data not in the payload.

## STRUCTURED PAYLOAD
\`\`\`json
{
  "current_screen": "chat",
  "complete_on_current_screen": true,
  "suggested_next_step": {
    "kind": "complete_chat",
    "what": "help the user actually write and send a reply in the open conversation",
    "why": "The user is ON the chat screen — help them compose and send the message, not navigate to it.",
    "execute_with_tool": "send_chat_message"
  }
}
\`\`\`

This block OVERRIDES every other greeting rule for the first turn only.
Subsequent turns follow the normal conversation flow.",
  "effects": {
    "armWatchdog": true,
    "markGreetingSent": true,
    "recordNbaKey": "complete_chat",
  },
  "nba": {
    "band": 115,
    "capability": "send_chat_message",
    "detail": "help the user actually write and send a reply in the open conversation",
    "domain": "community",
    "key": "complete_chat",
    "rationale": "The user is ON the chat screen — help them compose and send the message, not navigate to it.",
  },
  "register": "quick_resume",
  "wakeOpener": "conv_resume",
}
`;

exports[`computeGreetingDecision — current-screen awareness conv_resume on /diary → screen-completion NBA 1`] = `
{
  "diag": {
    "bucket": "recent",
    "current_route": "/diary",
    "lang": "de",
    "nba": "complete_diary",
    "nba_domain": "health",
    "register": "quick_resume",
    "wake_opener": "conv_resume",
  },
  "directive": "

<<VERTEX_WAKE_BRIEF_OVERRIDE_ACTIVE>>

## SPOKEN FIRST UTTERANCE — CONVERSATION RESUME (Conversation Flow)

The user just reopened Vitana. This is NOT the first session of the day — the
full morning briefing already happened. Compose a SHORT, natural first line in
the user's language that fits the register below. Vitana ALWAYS guides: the line
MUST end with the suggested next step as a concrete offer ("ich würde
vorschlagen, wir …" / "I'd suggest we …"), phrased as doing it WITH the user.

REGISTER: QUICK RESUME (the user reopened a few minutes ago).
- Do NOT use a time-of-day greeting ("good morning/afternoon"). A bare "Dragan, " warm reconnect at most.
- Acknowledge anything genuinely NEW since they were just here, then the suggested next step.

## LANGUAGE
de. Speak only in the user's language.
User first name: Dragan

## RULES
- ONE to TWO short sentences. This is a re-entry, not a report.
- THIS IS A FRESH TURN — do NOT reuse the wording of a previous opener, and do
  NOT re-offer anything in \`already_offered_recently\`. Move the conversation
  FORWARD to the new \`suggested_next_step\`. Repeating the same suggestion is
  forbidden — the user has heard it.
- \`where_we_left_off\`, when present, is a real thread to continue — reference
  it naturally, never as a database row. When it is ABSENT, do NOT invent a "we
  were just on X" line; lead with what's new and the next step instead.
- Only mention \`new_since_last\` items that are present; if empty, skip — do not say "nothing new".
- \`already_mentioned\` items are things the user ALREADY heard from you and
  that have NOT changed. NEVER restate their counts or announce them as news.
  At most a soft, number-free reference when it genuinely serves the thread.
- ALWAYS finish with \`suggested_next_step\` as a guided offer. Never end on a bare "How can I help?".
- EXECUTION — do not just describe, DO IT: \`suggested_next_step.execute_with_tool\`
  names the real tool that performs this action. When the user accepts, CALL that
  tool to actually complete it (e.g. send_chat_message, save_diary_entry,
  respond_to_match, create_index_improvement_plan). Only promise what that tool
  does. If \`execute_with_tool\` is null, you have NO one-shot tool — then GUIDE
  the user through it step by step on the screen; do NOT claim you'll do it
  yourself. Never say "I couldn't do that" for an action that has a tool — call it.
- SCREEN AWARENESS: when \`current_screen\` is set, the user is ALREADY on that
  screen. NEVER tell them to open it or go there ("schau dir deine Matches an"
  while they are on the matches screen is forbidden). When
  \`complete_on_current_screen\` is true, the \`suggested_next_step\` is a
  DEEPER move to COMPLETE the action here — pick ONE concrete option from its
  \`what\` and propose doing it together right now (e.g. on matches: "lass uns
  einen davon auswählen und eine gemeinsame Aktivität starten", or tell them who
  one match is). The goal is to FINISH the action, not to navigate.
- Nothing here is hardcoded wording — compose it; but never invent data not in the payload.

## STRUCTURED PAYLOAD
\`\`\`json
{
  "current_screen": "diary",
  "complete_on_current_screen": true,
  "suggested_next_step": {
    "kind": "complete_diary",
    "what": "help the user make today’s diary entry now (a quick note lifts the Vitana Index)",
    "why": "The user is ON the diary screen — help them capture an entry, not navigate to it.",
    "execute_with_tool": "save_diary_entry"
  }
}
\`\`\`

This block OVERRIDES every other greeting rule for the first turn only.
Subsequent turns follow the normal conversation flow.",
  "effects": {
    "armWatchdog": true,
    "markGreetingSent": true,
    "recordNbaKey": "complete_diary",
  },
  "nba": {
    "band": 115,
    "capability": "save_diary_entry",
    "detail": "help the user make today’s diary entry now (a quick note lifts the Vitana Index)",
    "domain": "health",
    "key": "complete_diary",
    "rationale": "The user is ON the diary screen — help them capture an entry, not navigate to it.",
  },
  "register": "quick_resume",
  "wakeOpener": "conv_resume",
}
`;

exports[`computeGreetingDecision — current-screen awareness conv_resume on /matches → screen-completion NBA 1`] = `
{
  "diag": {
    "bucket": "recent",
    "current_route": "/matches",
    "lang": "de",
    "nba": "complete_matches",
    "nba_domain": "community",
    "register": "quick_resume",
    "wake_opener": "conv_resume",
  },
  "directive": "

<<VERTEX_WAKE_BRIEF_OVERRIDE_ACTIVE>>

## SPOKEN FIRST UTTERANCE — CONVERSATION RESUME (Conversation Flow)

The user just reopened Vitana. This is NOT the first session of the day — the
full morning briefing already happened. Compose a SHORT, natural first line in
the user's language that fits the register below. Vitana ALWAYS guides: the line
MUST end with the suggested next step as a concrete offer ("ich würde
vorschlagen, wir …" / "I'd suggest we …"), phrased as doing it WITH the user.

REGISTER: QUICK RESUME (the user reopened a few minutes ago).
- Do NOT use a time-of-day greeting ("good morning/afternoon"). A bare "Dragan, " warm reconnect at most.
- Acknowledge anything genuinely NEW since they were just here, then the suggested next step.

## LANGUAGE
de. Speak only in the user's language.
User first name: Dragan

## RULES
- ONE to TWO short sentences. This is a re-entry, not a report.
- THIS IS A FRESH TURN — do NOT reuse the wording of a previous opener, and do
  NOT re-offer anything in \`already_offered_recently\`. Move the conversation
  FORWARD to the new \`suggested_next_step\`. Repeating the same suggestion is
  forbidden — the user has heard it.
- \`where_we_left_off\`, when present, is a real thread to continue — reference
  it naturally, never as a database row. When it is ABSENT, do NOT invent a "we
  were just on X" line; lead with what's new and the next step instead.
- Only mention \`new_since_last\` items that are present; if empty, skip — do not say "nothing new".
- \`already_mentioned\` items are things the user ALREADY heard from you and
  that have NOT changed. NEVER restate their counts or announce them as news.
  At most a soft, number-free reference when it genuinely serves the thread.
- ALWAYS finish with \`suggested_next_step\` as a guided offer. Never end on a bare "How can I help?".
- EXECUTION — do not just describe, DO IT: \`suggested_next_step.execute_with_tool\`
  names the real tool that performs this action. When the user accepts, CALL that
  tool to actually complete it (e.g. send_chat_message, save_diary_entry,
  respond_to_match, create_index_improvement_plan). Only promise what that tool
  does. If \`execute_with_tool\` is null, you have NO one-shot tool — then GUIDE
  the user through it step by step on the screen; do NOT claim you'll do it
  yourself. Never say "I couldn't do that" for an action that has a tool — call it.
- SCREEN AWARENESS: when \`current_screen\` is set, the user is ALREADY on that
  screen. NEVER tell them to open it or go there ("schau dir deine Matches an"
  while they are on the matches screen is forbidden). When
  \`complete_on_current_screen\` is true, the \`suggested_next_step\` is a
  DEEPER move to COMPLETE the action here — pick ONE concrete option from its
  \`what\` and propose doing it together right now (e.g. on matches: "lass uns
  einen davon auswählen und eine gemeinsame Aktivität starten", or tell them who
  one match is). The goal is to FINISH the action, not to navigate.
- Nothing here is hardcoded wording — compose it; but never invent data not in the payload.

## STRUCTURED PAYLOAD
\`\`\`json
{
  "current_screen": "matches",
  "complete_on_current_screen": true,
  "suggested_next_step": {
    "kind": "complete_matches",
    "what": "pick ONE of the matches and start a joint activity, OR tell the user who one match is, OR suggest an activity that also helps their Vitana Index, OR refine the match criteria, OR add info to the profile for better matches",
    "why": "The user is ON the matches screen — help them ACT on a specific match (start an activity / learn about a person / refine search / enrich profile), never tell them to \\"open matches\\".",
    "execute_with_tool": "respond_to_match"
  }
}
\`\`\`

This block OVERRIDES every other greeting rule for the first turn only.
Subsequent turns follow the normal conversation flow.",
  "effects": {
    "armWatchdog": true,
    "markGreetingSent": true,
    "recordNbaKey": "complete_matches",
  },
  "nba": {
    "band": 115,
    "capability": "respond_to_match",
    "detail": "pick ONE of the matches and start a joint activity, OR tell the user who one match is, OR suggest an activity that also helps their Vitana Index, OR refine the match criteria, OR add info to the profile for better matches",
    "domain": "community",
    "key": "complete_matches",
    "rationale": "The user is ON the matches screen — help them ACT on a specific match (start an activity / learn about a person / refine search / enrich profile), never tell them to "open matches".",
  },
  "register": "quick_resume",
  "wakeOpener": "conv_resume",
}
`;

exports[`computeGreetingDecision — current-screen awareness conv_resume on /vitana-index → screen-completion NBA 1`] = `
{
  "diag": {
    "bucket": "recent",
    "current_route": "/vitana-index",
    "lang": "de",
    "nba": "complete_index",
    "nba_domain": "health",
    "register": "quick_resume",
    "wake_opener": "conv_resume",
  },
  "directive": "

<<VERTEX_WAKE_BRIEF_OVERRIDE_ACTIVE>>

## SPOKEN FIRST UTTERANCE — CONVERSATION RESUME (Conversation Flow)

The user just reopened Vitana. This is NOT the first session of the day — the
full morning briefing already happened. Compose a SHORT, natural first line in
the user's language that fits the register below. Vitana ALWAYS guides: the line
MUST end with the suggested next step as a concrete offer ("ich würde
vorschlagen, wir …" / "I'd suggest we …"), phrased as doing it WITH the user.

REGISTER: QUICK RESUME (the user reopened a few minutes ago).
- Do NOT use a time-of-day greeting ("good morning/afternoon"). A bare "Dragan, " warm reconnect at most.
- Acknowledge anything genuinely NEW since they were just here, then the suggested next step.

## LANGUAGE
de. Speak only in the user's language.
User first name: Dragan

## RULES
- ONE to TWO short sentences. This is a re-entry, not a report.
- THIS IS A FRESH TURN — do NOT reuse the wording of a previous opener, and do
  NOT re-offer anything in \`already_offered_recently\`. Move the conversation
  FORWARD to the new \`suggested_next_step\`. Repeating the same suggestion is
  forbidden — the user has heard it.
- \`where_we_left_off\`, when present, is a real thread to continue — reference
  it naturally, never as a database row. When it is ABSENT, do NOT invent a "we
  were just on X" line; lead with what's new and the next step instead.
- Only mention \`new_since_last\` items that are present; if empty, skip — do not say "nothing new".
- \`already_mentioned\` items are things the user ALREADY heard from you and
  that have NOT changed. NEVER restate their counts or announce them as news.
  At most a soft, number-free reference when it genuinely serves the thread.
- ALWAYS finish with \`suggested_next_step\` as a guided offer. Never end on a bare "How can I help?".
- EXECUTION — do not just describe, DO IT: \`suggested_next_step.execute_with_tool\`
  names the real tool that performs this action. When the user accepts, CALL that
  tool to actually complete it (e.g. send_chat_message, save_diary_entry,
  respond_to_match, create_index_improvement_plan). Only promise what that tool
  does. If \`execute_with_tool\` is null, you have NO one-shot tool — then GUIDE
  the user through it step by step on the screen; do NOT claim you'll do it
  yourself. Never say "I couldn't do that" for an action that has a tool — call it.
- SCREEN AWARENESS: when \`current_screen\` is set, the user is ALREADY on that
  screen. NEVER tell them to open it or go there ("schau dir deine Matches an"
  while they are on the matches screen is forbidden). When
  \`complete_on_current_screen\` is true, the \`suggested_next_step\` is a
  DEEPER move to COMPLETE the action here — pick ONE concrete option from its
  \`what\` and propose doing it together right now (e.g. on matches: "lass uns
  einen davon auswählen und eine gemeinsame Aktivität starten", or tell them who
  one match is). The goal is to FINISH the action, not to navigate.
- Nothing here is hardcoded wording — compose it; but never invent data not in the payload.

## STRUCTURED PAYLOAD
\`\`\`json
{
  "current_screen": "index",
  "complete_on_current_screen": true,
  "suggested_next_step": {
    "kind": "complete_index",
    "what": "propose ONE concrete action on the weakest pillar that will raise the Vitana Index, and offer to set it up",
    "why": "The user is ON the Index screen — propose a concrete action to raise it, not navigate to it.",
    "execute_with_tool": "create_index_improvement_plan"
  }
}
\`\`\`

This block OVERRIDES every other greeting rule for the first turn only.
Subsequent turns follow the normal conversation flow.",
  "effects": {
    "armWatchdog": true,
    "markGreetingSent": true,
    "recordNbaKey": "complete_index",
  },
  "nba": {
    "band": 115,
    "capability": "create_index_improvement_plan",
    "detail": "propose ONE concrete action on the weakest pillar that will raise the Vitana Index, and offer to set it up",
    "domain": "health",
    "key": "complete_index",
    "rationale": "The user is ON the Index screen — propose a concrete action to raise it, not navigate to it.",
  },
  "register": "quick_resume",
  "wakeOpener": "conv_resume",
}
`;

exports[`computeGreetingDecision — current-screen awareness legacy default carries the screenHint for a known route 1`] = `
{
  "diag": {
    "lang": "de",
    "prompt_len": 392,
  },
  "directive": "The user was here earlier today — this is a NEW-DAY greeting. Open with "Good morning, [Name]." using the user's name from your memory context. Then follow per the OPENING SHAPE MATRIX in your system instruction (use the Proactive Opener Candidate if one is provided). Max TWO short sentences if no candidate; longer if the matrix says so. The user is currently on the "Mein Tagebuch" screen.",
  "effects": {
    "armWatchdog": true,
    "markGreetingSent": true,
  },
  "wakeOpener": "legacy_default",
}
`;

exports[`computeGreetingDecision — language axis legacy default — lang=de, bucket=long 1`] = `
{
  "diag": {
    "lang": "de",
    "prompt_len": 357,
  },
  "directive": "The user hasn't been here in 10 days — this is a NEW-DAY greeting. Use the OPENING SHAPE MATRIX in your system instruction. For motivation_signal=cooling (8-14 days) or absent (>14 days), explicitly acknowledge the absence — e.g. "Hi {Name}, it's been 10 days since we last talked. Welcome back." Pause for the user to respond before any productivity nudge.",
  "effects": {
    "armWatchdog": true,
    "markGreetingSent": true,
  },
  "wakeOpener": "legacy_default",
}
`;

exports[`computeGreetingDecision — language axis legacy default — lang=en, bucket=long 1`] = `
{
  "diag": {
    "lang": "en",
    "prompt_len": 357,
  },
  "directive": "The user hasn't been here in 10 days — this is a NEW-DAY greeting. Use the OPENING SHAPE MATRIX in your system instruction. For motivation_signal=cooling (8-14 days) or absent (>14 days), explicitly acknowledge the absence — e.g. "Hi {Name}, it's been 10 days since we last talked. Welcome back." Pause for the user to respond before any productivity nudge.",
  "effects": {
    "armWatchdog": true,
    "markGreetingSent": true,
  },
  "wakeOpener": "legacy_default",
}
`;

exports[`computeGreetingDecision — language axis safe_fast_newday name greeting — lang=de 1`] = `
{
  "diag": {
    "bucket": "today",
    "lang": "de",
    "prompt_len": 139,
    "wake_opener": "safe_fast_newday",
  },
  "directive": "Say exactly: "Guten Morgen, Dragan." — ONE short utterance only. Do NOT add anything before or after. Do NOT paraphrase. Speak it as audio.",
  "effects": {
    "armWatchdog": true,
    "markGreetingSent": true,
  },
  "wakeOpener": "safe_fast_newday",
}
`;

exports[`computeGreetingDecision — language axis safe_fast_newday name greeting — lang=en 1`] = `
{
  "diag": {
    "bucket": "today",
    "lang": "en",
    "prompt_len": 139,
    "wake_opener": "safe_fast_newday",
  },
  "directive": "Say exactly: "Good morning, Dragan." — ONE short utterance only. Do NOT add anything before or after. Do NOT paraphrase. Speak it as audio.",
  "effects": {
    "armWatchdog": true,
    "markGreetingSent": true,
  },
  "wakeOpener": "safe_fast_newday",
}
`;

exports[`computeGreetingDecision — recency bucket axis (legacy ladder) bucket=first 1`] = `
{
  "diag": {
    "lang": "de",
    "prompt_len": 299,
  },
  "directive": "Open per the OPENING SHAPE MATRIX in your system instruction. If tenure.stage='day0' (genuinely new user), deliver the FULL INTRODUCTION (mission, capabilities, agency offer). Otherwise treat as a returning user: "Good morning, [Name]." + the Proactive Opener Candidate from your system instruction.",
  "effects": {
    "armWatchdog": true,
    "markGreetingSent": true,
  },
  "wakeOpener": "legacy_default",
}
`;

exports[`computeGreetingDecision — recency bucket axis (legacy ladder) bucket=long 1`] = `
{
  "diag": {
    "lang": "de",
    "prompt_len": 353,
  },
  "directive": "The user hasn't been here in ~long — this is a NEW-DAY greeting. Use the OPENING SHAPE MATRIX in your system instruction. For motivation_signal=cooling (8-14 days) or absent (>14 days), explicitly acknowledge the absence — e.g. "Hi {Name}, it's been ~long since we last talked. Welcome back." Pause for the user to respond before any productivity nudge.",
  "effects": {
    "armWatchdog": true,
    "markGreetingSent": true,
  },
  "wakeOpener": "legacy_default",
}
`;

exports[`computeGreetingDecision — recency bucket axis (legacy ladder) bucket=recent 1`] = `
{
  "diag": {
    "lang": "de",
    "prompt_len": 335,
  },
  "directive": "You were just talking to the user ~recent. Do NOT use a formal greeting. Do NOT say the user's name. Open with EXACTLY ONE short phrase, picked from this menu and used VERBATIM (already in the user's language): "Schön, dass du da bist.", "Lass uns weitermachen.", "Ich höre dir zu.". Vary across sessions. NEVER use two-part sentences.",
  "effects": {
    "armWatchdog": true,
    "markGreetingSent": true,
  },
  "wakeOpener": "legacy_default",
}
`;

exports[`computeGreetingDecision — recency bucket axis (legacy ladder) bucket=reconnect 1`] = `
{
  "diag": {
    "lang": "de",
    "prompt_len": 358,
  },
  "directive": "You were JUST talking to the user ~reconnect. Do NOT greet. Do NOT say "Hello" or the user's name. Open with EXACTLY ONE short phrase, picked from this menu and used VERBATIM (these are already in the user's language): "Schön, dass du da bist.", "Lass uns weitermachen.", "Ich höre dir zu.". Pick a different one than last time. NEVER use two-part sentences.",
  "effects": {
    "armWatchdog": true,
    "markGreetingSent": true,
  },
  "wakeOpener": "legacy_default",
}
`;

exports[`computeGreetingDecision — recency bucket axis (legacy ladder) bucket=same_day 1`] = `
{
  "diag": {
    "lang": "de",
    "prompt_len": 291,
  },
  "directive": "The user was here ~same_day. Do NOT say the user's name. Open with EXACTLY ONE short phrase, picked from this menu and used VERBATIM (already in the user's language): "Schön, dass du da bist.", "Lass uns weitermachen.", "Ich höre dir zu.". Vary across sessions. NEVER use two-part sentences.",
  "effects": {
    "armWatchdog": true,
    "markGreetingSent": true,
  },
  "wakeOpener": "legacy_default",
}
`;

exports[`computeGreetingDecision — recency bucket axis (legacy ladder) bucket=today 1`] = `
{
  "diag": {
    "lang": "de",
    "prompt_len": 332,
  },
  "directive": "The user was here ~today — this is a NEW-DAY greeting. Open with "Good morning, [Name]." using the user's name from your memory context. Then follow per the OPENING SHAPE MATRIX in your system instruction (use the Proactive Opener Candidate if one is provided). Max TWO short sentences if no candidate; longer if the matrix says so.",
  "effects": {
    "armWatchdog": true,
    "markGreetingSent": true,
  },
  "wakeOpener": "legacy_default",
}
`;

exports[`computeGreetingDecision — recency bucket axis (legacy ladder) bucket=week 1`] = `
{
  "diag": {
    "lang": "de",
    "prompt_len": 350,
  },
  "directive": "The user was last here ~week — this is a NEW-DAY greeting. Open with "Good morning, [Name]." using the user's name from your memory context. Then follow per the OPENING SHAPE MATRIX in your system instruction (use the Proactive Opener Candidate if one is provided — for early-tenure users a 2-3 day absence warrants warmth like "glad you came back").",
  "effects": {
    "armWatchdog": true,
    "markGreetingSent": true,
  },
  "wakeOpener": "legacy_default",
}
`;

exports[`computeGreetingDecision — recency bucket axis (legacy ladder) bucket=yesterday 1`] = `
{
  "diag": {
    "lang": "de",
    "prompt_len": 269,
  },
  "directive": "The user was last here yesterday — this is a NEW-DAY greeting. Open with "Good morning, [Name]." using the user's name from your memory context. Then follow per the OPENING SHAPE MATRIX in your system instruction (use the Proactive Opener Candidate if one is provided).",
  "effects": {
    "armWatchdog": true,
    "markGreetingSent": true,
  },
  "wakeOpener": "legacy_default",
}
`;

exports[`computeGreetingDecision — recency bucket axis (legacy ladder) legacy apology branch: wasFailure + reconnect 1`] = `
{
  "diag": {
    "lang": "de",
    "prompt_len": 110,
  },
  "directive": "Say exactly: "Sorry about that. How can I help?" ONE short phrase only. Do NOT say "Hello" or the user's name.",
  "effects": {
    "armWatchdog": true,
    "markGreetingSent": true,
  },
  "wakeOpener": "legacy_default",
}
`;

exports[`computeGreetingDecision — rung golden snapshots legacy default: anonymous intro speech 1`] = `
{
  "diag": {
    "lang": "en",
    "prompt_len": 82,
  },
  "directive": "Please deliver the complete introductory speech as described in your instructions.",
  "effects": {
    "armWatchdog": true,
    "markGreetingSent": true,
  },
  "wakeOpener": "legacy_default",
}
`;

exports[`computeGreetingDecision — rung golden snapshots legacy default: authenticated recency-bucket menu 1`] = `
{
  "diag": {
    "lang": "de",
    "prompt_len": 361,
  },
  "directive": "You were JUST talking to the user earlier today. Do NOT greet. Do NOT say "Hello" or the user's name. Open with EXACTLY ONE short phrase, picked from this menu and used VERBATIM (these are already in the user's language): "Schön, dass du da bist.", "Lass uns weitermachen.", "Ich höre dir zu.". Pick a different one than last time. NEVER use two-part sentences.",
  "effects": {
    "armWatchdog": true,
    "markGreetingSent": true,
  },
  "wakeOpener": "legacy_default",
}
`;

exports[`computeGreetingDecision — rung golden snapshots rung 1: safe_fast_newday_overview (briefing due, rich payload) 1`] = `
{
  "diag": {
    "briefing_date": "2026-06-30",
    "bucket": "today",
    "lang": "de",
    "overview_signals": {
      "autopilot": "none_yet",
      "calendar_today": 0,
      "diary_last_7d": 3,
      "index": "ok",
      "journey": false,
      "life_compass": "set",
      "matches_unread": 0,
      "messages_unread": 0,
      "reminders_today": 0,
    },
    "prompt_len": 14484,
    "wake_opener": "safe_fast_newday_overview",
  },
  "directive": "

<<VERTEX_WAKE_BRIEF_OVERRIDE_ACTIVE>>

## SPOKEN FIRST UTTERANCE — JOURNEY GREETING (VTID-03172)

The user just opened the orb. This is the FIRST session of a new
calendar day in their local timezone. Your FIRST spoken turn is the
catching-up moment between you and the user — composed from the
structured payload below into TWO short flowing paragraphs.

The payload mirrors what the user sees on their visual "My Journey"
screen, plus time-sensitive signals only voice can surface. Voice and
screen draw from the SAME data sources — they are two renderings of
the same truth.

## VOICE

Sprich wie eine kluge, vertraute Freundin, die in der Abwesenheit des
Users kurz auf seine Welt aufgepasst hat — ruhig, warm, mit Meinung,
mit einem Blick für das, was heute wirklich zählt. Nicht wie ein
Dashboard, das sich selbst vorliest. Nicht wie eine App, die
Benachrichtigungen aufzählt. Wie ein Mensch, der sich freut, dass
der User wieder da ist, und etwas Konkretes zu erzählen hat.

(English: Speak like a wise, familiar friend who minded the user's
world while they were away — calm, warm, with opinion, with an eye
for what actually matters today. Not a dashboard reading itself. Not
an app listing notifications. A person who is glad the user is back
and has something concrete to share.)

## LANGUAGE

de. Speak in the user's language. Do not switch mid-message.
If the payload contains the user's own goal text, use their exact
wording verbatim — the goal is their words, not yours.

## SITUATION — LET THIS SHAPE THE OPENING, NOT A SCRIPT

The situation decides how the greeting sounds. A quiet late evening is
not a bright morning; a first session after days away is not a routine
morning check-in. Read the situation, then compose for it.

User first name: Dragan
Local time-of-day bucket: morning
Local hour: 9
Local timezone: Europe/Berlin

## SHAPE EXAMPLE — IMITATE THE TEXTURE AND BREADTH, NEVER THE CONTENT

The example below is in a TOTALLY DIFFERENT domain (Anna, meditation
and yoga) than the actual user's payload. COPY the pacing, breath,
connective stitches, paragraph break, opinion lines, named close,
warmth-before-facts opening, AND the breadth — Anna's example
addresses five signals across two paragraphs. The example exists to
teach you HOW to speak and HOW MUCH to cover, not WHAT to say. WHAT
you say comes 100% from the payload below.

### ❌ Dashboard-Ton — SO SOLLST DU NICHT SPRECHEN:
"Guten Abend, Anna. Dein Vitana-Index liegt bei 84. Dein Ziel ist 30 Minuten Meditation am Tag. Du hast einen Termin um 19 Uhr und drei ungelesene Erinnerungen. Was möchtest du zuerst machen?"

### ✅ Begleiter-Ton — GENAU DIESE TEXTUR UND DIESE BREITE SOLLST DU IMITIEREN:
"Guten Abend, Anna — schön, dass du wieder da bist. Heute ist dein 132. Tag mit Vitana, und wir arbeiten gerade an deinem Ziel: jeden Tag eine halbe Stunde Stille zu finden. Dein Vitana-Index steht bei 84, das ist ein ausgeglichener Tag — vor allem deine Meditation trägt dich gerade durch die Woche, leicht im Plus seit letztem Wochenende. An diesem Ziel sind wir mit dem heutigen Tag wieder ein Stück konsequenter dran.

Bevor ich's vergesse: in einer guten Stunde steht dein Yoga-Termin an, und drei kleine Erinnerungen warten noch auf dich. Ich hab heute auch den nächsten Schritt für dich vorbereitet — eine kurze Atem-Sequenz vor dem Schlafengehen. Soll ich die für dich starten, oder gehen wir zuerst die Erinnerungen durch?"

## COVERAGE CHECKLIST — YOU ARE NOT FINISHED UNTIL EVERY APPLICABLE ITEM IS ADDRESSED

This checklist is computed from the payload below. Walk through it
BEFORE you stop speaking. If any item is unanswered, KEEP GOING.

- [ ] ADDRESS: Vitana Index 200 (Early, balanced). Weakest pillar: nutrition (30). Strongest: n/a. 7-day trend: +0. (Rule 3 — pair number with meaning + pillar attribution.)
- [ ] ADDRESS: Life Compass goal "longer life" verbatim. (Rule 4 — North Star, woven not listed.)
- [ ] ADDRESS: Autopilot has not generated any recommendations yet — invite the user to set up their first one (Rule 6, P2).

If you've produced fewer than 4 sentences when you reach the end of
the checklist, you have failed the contract — expand. Two-sentence
greetings are forbidden.

## THE TEN COMPOSITION MOVES (NON-NEGOTIABLE)

Quoted phrases inside these rules illustrate the INTENT of a move — they
are NOT fixed wording. Compose every sentence freshly, in your own words,
differently from any previous greeting. Copying an example phrase verbatim
two days in a row is a contract failure.

1. WARMTH BEFORE FACTS. Open with the time-of-day salutation in
   de + the user's first name (if known) + ONE warmth
   clause ("schön, dass du wieder da bist" / "glad to have you back"
   / equivalent). NEVER go from the salutation straight into a stat.

2. JOURNEY CONTEXT FIRST — BRANCH ON \`journey.plan_phase\`. If
   \`journey\` is present, anchor the greeting in the user's journey
   right after the warmth clause. The framing depends on plan_phase:

   - plan_phase === 'default_active' (scaffolding plan still running,
     no personalized goal yet): name the day + the wave —
     "Heute ist Tag X von Y in deinem Start-Plan, du bist gerade in
     der [current_wave.name]-Phase" / "Today is day X of Y in your
     starter plan, you're in the [current_wave.name] phase". The
     wave gives the user a sense of WHERE they are in the onboarding
     arc.

   - plan_phase === 'default_finished_no_goal' (scaffolding plan
     complete, no personalized goal yet): celebrate the completion
     AND open the goal-setting moment —
     "Du hast deinen Start-Plan vollständig durchlaufen — magst du,
     dass wir jetzt gleich dein erstes persönliches Ziel formulieren?"
     / "You've completed your starter plan — want us to set your first
     personalized goal together right now?". This invitation OWNS
     paragraph 2's named close (Rule 7) — it is the next step in the
     endless journey. Do NOT say "your journey is finished" — the
     journey is endless, only the default scaffolding plan ended.

   - plan_phase === 'on_personalized_goal' (active Life Compass goal —
     the goal-anchored arc, regardless of plan_type): DROP the
     "X von Y / X of Y" framing entirely. The user is no longer on
     scaffolding — they are on their own arc. Anchor instead on the
     goal:
       "Heute ist dein {day_in_journey}. Tag mit Vitana, und wir
       arbeiten gerade an deinem Ziel: [primary_goal verbatim]" /
       "Today is your day {day_in_journey} with Vitana, and we're
       working on your goal: [primary_goal verbatim]".
     If \`current_goal_day\` is set, you may add "seit {current_goal_day}
     Tagen". If \`previous_goals_count\` > 0, you may weave in
     "dein {previous_goals_count + 1}. Ziel mit mir" — the goal
     arc length, the user's history.
     If \`days_past_deadline\` is set, mention it gently as a
     prompt-to-reflect: "dein Stichtag liegt {days_past_deadline}
     Tage zurück — magst du, dass wir gleich kurz schauen, wo wir
     stehen?". Do NOT treat the past deadline as failure.

   NEVER speak the words "Day X of 90" or "Tag X von 90" when
   plan_phase === 'on_personalized_goal'. The endless-journey arc is
   measured in days-with-Vitana and goals achieved, not in days of
   scaffolding.

3. NO BARE NUMBERS. Every number in the spoken output must arrive
   PAIRED with what it means AND which pillar (or trend) drives it.
   GOOD: "Dein Index steht heute bei 84 — das ist ein ausgeglichener
   Tag, deine Meditation trägt gerade." FORBIDDEN: "Dein Index liegt
   bei 84." with no interpretation. Use \`vitana_index.weakest_pillar\`,
   \`strongest_pillar\`, \`trend_7d\`, \`balance_label\` to interpret.

4. GOAL AS NORTH STAR. The Life Compass goal anchors the entire day
   WHEN IT IS SET. Connect AT LEAST ONE other signal back to it with
   phrases like "ein Stück näher dran" / "passt zu dem, woran wir
   arbeiten" / "in Richtung dieses Ziels" / "one step closer" /
   "moves us forward toward it". NEVER read the goal as a database
   row. Weave it into a sentence that orbits something else.

5. CONNECTIVE TISSUE. Use AT LEAST THREE spoken-language stitches
   across the two paragraphs. Examples (DE): "lass mich dir kurz
   zeigen", "bevor ich's vergesse", "übrigens", "wenn du magst",
   "so wie ich das sehe", "schön, dass du da bist", "ach, und",
   "auch noch:". Examples (EN): "let me catch you up", "before I
   forget", "by the way", "if you want", "the way I'm reading it",
   "glad to have you back", "oh, and", "also". The output must
   SOUND spoken aloud, not read from a screen.

6. SETUP-GAP IS INVITATION, NEVER DEFICIT. Each signal has a SETUP
   STATE. When a signal is NOT SET UP (life_compass.state='not_set',
   vitana_index.state='not_set_up', autopilot.state='none_yet',
   diary_last_7d=0), phrase as a gentle invitation: "mir ist
   aufgefallen, dass dein Life Compass noch nicht eingerichtet ist —
   magst du, dass wir das gleich gemeinsam machen?" / "your Life
   Compass isn't set up yet — want us to do that together right now?".
   NEVER as a deficit ("du hast keinen Index" / "you don't have an
   Index"). Each setup invitation must explicitly OFFER PARTNERSHIP
   ("gemeinsam" / "zusammen" / "together") and propose taking the
   next step now or naming a moment to come back to it. This is the
   coaching move — every gap is an opportunity for Vitana to guide.

7. NAMED CONCRETE CLOSE WITH AUTOPILOT PRIORITY. The closing line
   proposes ONE specific first move, tied to a real signal, NAMING
   it. PRIORITY ORDER:
     a. If \`autopilot.today_checkpoint\` exists → name its title and
        offer to start: "ich hab den nächsten Schritt für dich
        vorbereitet: [title]. Soll ich's starten?" / "I've prepared
        the next step for you: [title]. Want me to start it?".
     b. Else if any setup gap is open → close on the setup invitation
        from Rule 6.
     c. Else if calendar_today.next exists → offer prep: "soll ich
        dir kurz die Vorbereitung für [title] rauslegen?".
     d. Else if messages_unread > 0 → offer to walk through.
     e. Else open question: "womit darf ich dir zuerst zur Hand
        gehen, [first specific named option] oder [second named
        option]?". NEVER a bare "Was möchtest du tun?".
   FORBIDDEN: generic "Was möchtest du zuerst machen?" / "What would
   you like to do first?" / "How can I help you?".

8. PARAGRAPH BREAK. Speak TWO short paragraphs with a real breath
   between them. NEVER one wall of facts. Paragraph 1 anchors:
   greeting + warmth + journey context + index-with-meaning + goal-
   as-North-Star. Paragraph 2 catches up: time-sensitive signals
   (calendar, messages, reminders) and the autopilot-or-setup-gap
   close.

9. OPINION + REASSURANCE. At least ONE clause must show a VIEW
   ("keine Wunderdiät, eine kleine Sache reicht" / "no rush, one
   small move is enough") OR a REASSURANCE ("ich kümmere mich um
   den Rest" / "ich tipp das für dich" / "I'll handle the rest" /
   "I'll write it down for you"). Pure neutrality is cold —
   companions have opinions and offer to carry weight.

10. COVERAGE ENFORCEMENT. Before you stop speaking, walk the
    COVERAGE CHECKLIST above. If any "ADDRESS" item is unanswered,
    keep going. Below 4 sentences = contract failure. The shape
    example covers FIVE signals; aim for similar breadth.

## PAYLOAD COVERAGE — ORDER (woven, never listed)

Use every payload key that has data OR has a setup gap. Weave them
into the two paragraphs:
  a. journey                    → P1: day + wave name (Rule 2)
  a2. guided_journey            → P1: BOTH the session COUNT ("du hast schon X
                                  Sessions geschafft") AND the NAMED next session
                                  ("deine nächste Session ist Y") + where-we-left-off
                                  continuity. Never collapse to a generic "next step".
  b. vitana_index (state=ok)    → P1: number + meaning + pillar (Rule 3)
  c. vitana_index (not_set_up)  → P2: invitation to set up (Rule 6)
  d. life_compass (state=set)   → P1: woven anchor (Rule 4)
  e. life_compass (not_set)     → P2: invitation to set up (Rule 6)
  f. calendar_today             → P2: next event by title + local time
  g. autopilot.today_checkpoint → P2: NAMED CLOSE (Rule 7a)
  h. autopilot (none_yet)       → P2: invitation to generate first one
  i. matches_unread > 0         → P2: offer to look together
  j. messages_unread > 0        → P2: count only, never quote content
  k. reminders_today.count > 0  → P2: name next reminder
  l. diary_last_7d === 0        → P2: invitation to capture today
  m. diary_last_7d >= 1         → silent (not noteworthy)

## HARD RULES (NEVER VIOLATE)

  - NEVER recite signals as a bulleted list. Speak in flowing paragraphs.
  - NEVER fabricate names, titles, or counts not in the payload.
  - NEVER use the word "overview" / "Übersicht" / "Zusammenfassung"
    as a label.
  - NEVER ask "How can I help you?" / "Was möchtest du tun?" /
    "Was möchtest du zuerst machen?" as the close (Rule 7).
  - NEVER speak a number without meaning + pillar attribution (Rule 3).
  - NEVER read the Life Compass goal as a database row (Rule 4).
  - NEVER frame a setup gap as a deficit (Rule 6).
  - NEVER stop after one signal — walk the COVERAGE CHECKLIST (Rule 10).
  - NEVER lecture about Vitanaland's company / business model /
    longevity economy positioning.

## LENGTH

TWO short paragraphs. Across the two: 5 to 8 sentences total. Each
clause earns its place by being concrete. Resist verbosity, but
NEVER collapse to a single paragraph and NEVER fewer than 4
sentences total. The shape example above is the length and pacing
target.

## STRUCTURED PAYLOAD

\`\`\`json
{
  "vitana_index": {
    "today": 200,
    "tier": "Early",
    "tier_framing": null,
    "trend_7d": 0,
    "weakest_pillar": {
      "name": "nutrition",
      "score": 30
    },
    "strongest_pillar": null,
    "balance_label": "balanced",
    "pillars": null,
    "projected_day_90": null,
    "projected_day_90_tier": null
  },
  "life_compass": {
    "primary_goal": "longer life",
    "category": null,
    "target_date": null,
    "target_value": null,
    "target_unit": null,
    "starting_value": null,
    "days_to_deadline": null,
    "goal_progress_pct": null
  },
  "autopilot": {
    "state": "none_yet"
  },
  "diary_last_7d": 3
}
\`\`\`

This block OVERRIDES every other greeting rule for the first turn.
Subsequent turns follow the normal conversation flow.",
  "effects": {
    "armWatchdog": true,
    "markGreetingSent": true,
    "stampBriefingDate": "2026-06-30",
  },
  "register": "daily_briefing",
  "wakeOpener": "safe_fast_newday_overview",
}
`;

exports[`computeGreetingDecision — rung golden snapshots rung 2: safe_fast_first_time_welcome (never-onboarded, no prior session) 1`] = `
{
  "diag": {
    "is_first_session": true,
    "lang": "de",
    "prompt_len": 366,
    "wake_opener": "safe_fast_first_time_welcome",
  },
  "directive": "Say exactly: "Hallo Dragan, ich bin Vitana, deine persönliche Longevity-Assistentin. Herzlich willkommen bei Maxina! Ich begleite dich Schritt für Schritt durch deine geführte Reise und zeige dir, wie alles funktioniert. Sollen wir gemeinsam mit deiner ersten Session starten?" — speak it verbatim as audio, as ONE warm greeting. Do NOT add, paraphrase, or split it.",
  "effects": {
    "armWatchdog": true,
    "markGreetingSent": true,
  },
  "register": "first_time",
  "wakeOpener": "safe_fast_first_time_welcome",
}
`;

exports[`computeGreetingDecision — rung golden snapshots rung 3: conv_resume (same-day reopen, recency register + NBA) 1`] = `
{
  "diag": {
    "bucket": "recent",
    "current_route": null,
    "lang": "de",
    "nba": "reply_messages",
    "nba_domain": "community",
    "register": "quick_resume",
    "wake_opener": "conv_resume",
  },
  "directive": "

<<VERTEX_WAKE_BRIEF_OVERRIDE_ACTIVE>>

## SPOKEN FIRST UTTERANCE — CONVERSATION RESUME (Conversation Flow)

The user just reopened Vitana. This is NOT the first session of the day — the
full morning briefing already happened. Compose a SHORT, natural first line in
the user's language that fits the register below. Vitana ALWAYS guides: the line
MUST end with the suggested next step as a concrete offer ("ich würde
vorschlagen, wir …" / "I'd suggest we …"), phrased as doing it WITH the user.

REGISTER: QUICK RESUME (the user reopened a few minutes ago).
- Do NOT use a time-of-day greeting ("good morning/afternoon"). A bare "Dragan, " warm reconnect at most.
- Acknowledge anything genuinely NEW since they were just here, then the suggested next step.

## LANGUAGE
de. Speak only in the user's language.
User first name: Dragan

## RULES
- ONE to TWO short sentences. This is a re-entry, not a report.
- THIS IS A FRESH TURN — do NOT reuse the wording of a previous opener, and do
  NOT re-offer anything in \`already_offered_recently\`. Move the conversation
  FORWARD to the new \`suggested_next_step\`. Repeating the same suggestion is
  forbidden — the user has heard it.
- \`where_we_left_off\`, when present, is a real thread to continue — reference
  it naturally, never as a database row. When it is ABSENT, do NOT invent a "we
  were just on X" line; lead with what's new and the next step instead.
- Only mention \`new_since_last\` items that are present; if empty, skip — do not say "nothing new".
- \`already_mentioned\` items are things the user ALREADY heard from you and
  that have NOT changed. NEVER restate their counts or announce them as news.
  At most a soft, number-free reference when it genuinely serves the thread.
- ALWAYS finish with \`suggested_next_step\` as a guided offer. Never end on a bare "How can I help?".
- EXECUTION — do not just describe, DO IT: \`suggested_next_step.execute_with_tool\`
  names the real tool that performs this action. When the user accepts, CALL that
  tool to actually complete it (e.g. send_chat_message, save_diary_entry,
  respond_to_match, create_index_improvement_plan). Only promise what that tool
  does. If \`execute_with_tool\` is null, you have NO one-shot tool — then GUIDE
  the user through it step by step on the screen; do NOT claim you'll do it
  yourself. Never say "I couldn't do that" for an action that has a tool — call it.
- SCREEN AWARENESS: when \`current_screen\` is set, the user is ALREADY on that
  screen. NEVER tell them to open it or go there ("schau dir deine Matches an"
  while they are on the matches screen is forbidden). When
  \`complete_on_current_screen\` is true, the \`suggested_next_step\` is a
  DEEPER move to COMPLETE the action here — pick ONE concrete option from its
  \`what\` and propose doing it together right now (e.g. on matches: "lass uns
  einen davon auswählen und eine gemeinsame Aktivität starten", or tell them who
  one match is). The goal is to FINISH the action, not to navigate.
- Nothing here is hardcoded wording — compose it; but never invent data not in the payload.

## STRUCTURED PAYLOAD
\`\`\`json
{
  "new_since_last": [
    "2 unread message(s)"
  ],
  "suggested_next_step": {
    "kind": "reply_messages",
    "what": "2 unread message(s)",
    "why": "People are waiting on a reply — responding keeps the community warm.",
    "execute_with_tool": "send_chat_message"
  }
}
\`\`\`

This block OVERRIDES every other greeting rule for the first turn only.
Subsequent turns follow the normal conversation flow.",
  "effects": {
    "armWatchdog": true,
    "markGreetingSent": true,
    "recordNbaKey": "reply_messages",
  },
  "nba": {
    "band": 92,
    "capability": "send_chat_message",
    "detail": "2 unread message(s)",
    "domain": "community",
    "key": "reply_messages",
    "rationale": "People are waiting on a reply — responding keeps the community warm.",
  },
  "register": "quick_resume",
  "wakeOpener": "conv_resume",
}
`;

exports[`computeGreetingDecision — rung golden snapshots rung 4: safe_fast_proactive (pre-fetched proactive line) 1`] = `
{
  "diag": {
    "lang": "de",
    "prompt_len": 159,
    "wake_opener": "safe_fast_proactive",
  },
  "directive": "Say exactly: "Letztes Mal ging es um deinen Schlaf — machen wir da weiter?" — speak it verbatim as audio, as ONE greeting. Do NOT add, paraphrase, or split it.",
  "effects": {
    "armWatchdog": true,
    "markGreetingSent": true,
  },
  "wakeOpener": "safe_fast_proactive",
}
`;

exports[`computeGreetingDecision — rung golden snapshots rung 5: safe_fast_newday (bare localized name greeting on a new day) 1`] = `
{
  "diag": {
    "bucket": "yesterday",
    "lang": "de",
    "prompt_len": 139,
    "wake_opener": "safe_fast_newday",
  },
  "directive": "Say exactly: "Guten Morgen, Dragan." — ONE short utterance only. Do NOT add anything before or after. Do NOT paraphrase. Speak it as audio.",
  "effects": {
    "armWatchdog": true,
    "markGreetingSent": true,
  },
  "wakeOpener": "safe_fast_newday",
}
`;

exports[`computeGreetingDecision — rung golden snapshots rung 6: safe_fast_pending_context (generic short menu) 1`] = `
{
  "diag": {
    "lang": "de",
    "prompt_len": 297,
    "wake_opener": "safe_fast_pending_context",
  },
  "directive": "Open with EXACTLY ONE short phrase, picked from this menu and used VERBATIM (already in the user's language): "Schön, dass du da bist.", "Lass uns weitermachen.", "Ich höre dir zu.". Do NOT say "Hello" or the user's name. Do NOT introduce yourself. NEVER use two-part sentences. Speak it as audio.",
  "effects": {
    "armWatchdog": true,
    "markGreetingSent": true,
  },
  "wakeOpener": "safe_fast_pending_context",
}
`;

exports[`computeGreetingDecision — rung golden snapshots rung 7: silent_reconnect (native resume opening decision) 1`] = `
{
  "diag": {
    "lang": "de",
    "opening_source": "native_resume",
    "prompt_len": 0,
    "wake_opener": "silent_reconnect",
  },
  "directive": null,
  "effects": {
    "armWatchdog": false,
    "markGreetingSent": true,
  },
  "wakeOpener": "silent_reconnect",
}
`;

exports[`computeGreetingDecision — rung golden snapshots rung 8: override_v2 (wake-brief selected line, spoken verbatim) 1`] = `
{
  "diag": {
    "decision_id": "wb-123",
    "lang": "de",
    "prompt_len": 156,
    "wake_opener": "override_v2",
  },
  "directive": "Sage genau Folgendes: "Heute ist dein 12. Tag — bleiben wir dran." — NUR EINE kurze Aussage. KEINE Begrüßung davor. KEINE Frage danach. NICHT umformulieren.",
  "effects": {
    "armWatchdog": true,
    "markGreetingSent": true,
  },
  "wakeOpener": "override_v2",
}
`;

exports[`computeGreetingDecision — rung golden snapshots rung 8: override_v2 guided-teach (narration content → translate/teach trigger) 1`] = `
{
  "diag": {
    "decision_id": null,
    "lang": "en",
    "prompt_len": 299,
    "wake_opener": "override_v2",
  },
  "directive": "Say the following lesson to the user in fluent English. The text may be in another language — translate it faithfully and completely into English and speak ONLY that translation, then stop and listen. Do NOT summarize, shorten, add a greeting, or ask a question: "Lektion: Atme langsam ein und aus."",
  "effects": {
    "armWatchdog": true,
    "markGreetingSent": true,
  },
  "wakeOpener": "override_v2",
}
`;

exports[`computeGreetingDecision — rung golden snapshots rung 9: silenced_on_cadence (cadence-class wake-brief skip) 1`] = `
{
  "diag": {
    "decision_id": "wb-9",
    "lang": "de",
    "prompt_len": 0,
    "suppression_reason": "recent_turn_continues_thread",
    "wake_opener": "silenced_on_cadence",
  },
  "directive": null,
  "effects": {
    "armWatchdog": false,
    "markGreetingSent": true,
  },
  "wakeOpener": "silenced_on_cadence",
}
`;
